# html-parser-benchmarks

./: CMakeLists.txt  README.md  benchmark.sh
include/: definitions.h
include/flo/: flo-html-parser.h
include/google/: gumbo-parser.h
include/lexbor/: lexbor-lexbor.h  lexbor.h
include/util/: decorator.h
src/: main.c
src/flo/: flo-html-parser.c  html-parser.c
src/google/: gumbo-parser.c
src/lexbor/: lexbor-lexbor.c  lexbor.c
